--- a/angular.json
+++ b/angular.json
@@ -123,6 +123,10 @@
               "devServerTarget": "books-library:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
